--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,10 +14,43 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    splits{
+        density {
+            // Configures multiple APKs based on screen density.
+            enable true
+            reset()
+            // Specifies a list of screen densities Gradle should not create multiple APKs for.
+            include "xxhdpi"
+
+            // Specifies a list of compatible screen size settings for the manifest.
+            compatibleScreens  'large'
+        }
+        abi {
+
+            // Enables building multiple APKs per ABI.
+            enable true
+
+            // By default all ABIs are included, so use reset() and include to specify that we only
+            // want APKs for x86 and x86_64.
+
+            // Resets the list of ABIs that Gradle should create APKs for to none.
+            reset()
+
+            // Specifies a list of ABIs that Gradle should create APKs for.
+            include "arm64-v8a", "x86_64"
+
+            // Specifies that we do not want to also generate a universal APK that includes all ABIs.
+            universalApk false
+        }
+    }
+
+
     buildTypes {
         release {
+            zipAlignEnabled true
             minifyEnabled true
-            //shrinkResources true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -31,7 +64,7 @@ dependencies {
     implementation 'org.jetbrains.anko:anko-sqlite:0.10.0'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
