--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -64,7 +68,9 @@ dependencies {
     implementation 'org.jetbrains.anko:anko-sqlite:0.10.0'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'cglib:cglib:3.2.9'
 
+    testImplementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.10'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
