--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
+
     defaultConfig {
         applicationId "com.startai.winvkey"
         minSdkVersion 22
@@ -54,21 +55,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        targetCompatibility 1.8
+    compileOptions{
         sourceCompatibility 1.8
+        targetCompatibility 1.8
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'org.jetbrains.anko:anko-sqlite:0.10.0'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'cglib:cglib:3.2.9'
 
     testImplementation 'org.jetbrains.kotlin:kotlin-reflect:1.3.10'
     testImplementation 'junit:junit:4.12'
